--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
   
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-   
-    <title>React App</title>
+    <script
+    src="https://code.jquery.com/jquery-3.6.1.min.js"
+    integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ="
+    crossorigin="anonymous"></script>
+    <title>Social Mint </title>
   </head>
-  <body >
+  <body class="bg-black" >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
