--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
     crossorigin="anonymous"></script>
     <title>Social Mint </title>
   </head>
-  <body class="bg-black" >
+  <body  >
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
    
